--- a/pset_linear_regression.ipynb
+++ b/pset_linear_regression.ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "70ae9be0",
+   "metadata": {},
+   "source": [
+    "                                                                                https://github.com/sidhantx/LinearRegression"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "16336349",
    "metadata": {},
    "source": [
@@ -79,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bb657d04",
+   "id": "49c9f842",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -101,7 +109,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2b90f030",
+   "id": "7b27cf24",
    "metadata": {},
    "source": [
     "#### Visualizing your model"
@@ -110,7 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "963e17c2",
+   "id": "dbbea543",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +136,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8ff0f620",
+   "id": "bd8df7bb",
    "metadata": {},
    "source": [
     "### Answer the Questions:\n",
@@ -141,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5782e7d9",
+   "id": "c8de403a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -150,7 +158,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1263b82d",
+   "id": "eccc776a",
    "metadata": {},
    "source": [
     "### Now lets train a model on the whole data "
@@ -197,7 +205,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d2c4bea0",
+   "id": "cd58b6c6",
    "metadata": {},
    "source": [
     "### Answer the Questions:\n",
@@ -265,7 +273,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ef3c68c",
+   "id": "20e3605b",
    "metadata": {},
    "source": [
     "### Calculate the mse for both train, and test data, and report it."
@@ -274,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "2a906a36",
+   "id": "0ae24b30",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +292,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b9fc485a",
+   "id": "d0a60255",
    "metadata": {},
    "outputs": [],
    "source": []
