--- a/linear_regression_notebook.ipynb
+++ b/linear_regression_notebook.ipynb
@@ -9,7 +9,10 @@
     }
    },
    "source": [
-    "                                                                                https://github.com/sidhantx/LinearRegression"
+    "<div>                                                                               https://github.com/sidhantx/LinearRegression\n",
+    "                                                                                \n",
+    "Author : Nitesh Kumar\n",
+    "</div>\n"
    ]
   },
   {
@@ -938,7 +941,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "53d0cf80",
+   "id": "b5c04efa",
    "metadata": {},
    "outputs": [
     {
@@ -959,7 +962,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8520ec4a",
+   "id": "9acaa07c",
    "metadata": {},
    "outputs": [
     {
